CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(circos)
#dependency
OPTION(USE_TEXT "USE FREETYPE TO RENDER TEXT" OFF)
OPTION(USE_XLSX "USE XLSX AS DATA" ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(MSVC)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++latest")
endif(MSVC)


FIND_PACKAGE(PNG 1.2.9 REQUIRED)
INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIRS})
# external library: zlib (mandatory)

FIND_PACKAGE(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
IF(USE_TEXT)
# external library: FreeType (optional)
    ADD_DEFINITIONS(-DUSE_TEXT)
    FIND_PACKAGE(Freetype REQUIRED)
    IF(FREETYPE_FOUND)
        INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})
        SET(FREETYPE_FLAGS "-DUSE_FREETYPE")
    ELSE(FREETYPE_FOUND)
        SET(FREETYPE_FLAGS "-DNO_FREETYPE")
        SET(FREETYPE_LIBRARIES "")
    ENDIF(FREETYPE_FOUND)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FREETYPE_FLAGS}")
ENDIF(USE_TEXT)

# FIND_PACKAGE(PNGWRITER REQUIRED)
# INCLUDE_DIRECTORIES(${PNGWRITER_INCLUDE_DIRS})


SET(CIRCOS_SRC_DIR ${CMAKE_SOURCE_DIR}/src)
SET(CIRCOS_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
FILE(GLOB_RECURSE  CIRCOS_SRC_LISTS ${CIRCOS_SRC_DIR}/*.cpp)

SET(CIRCOS_TEST_DIR ${CMAKE_SOURCE_DIR}/test)


INCLUDE_DIRECTORIES(${CIRCOS_INCLUDE_DIR})
ADD_EXECUTABLE("circos_test"  ${CIRCOS_TEST_DIR}/drawer_test.cpp ${CIRCOS_SRC_LISTS})

IF(USE_TEXT)
    target_link_libraries("circos_test" ${ZLIB_LIBRARIES} ${PNG_LIBRARIES} ${FREETYPE_LIBRARIES})
ELSE(USE_TEXT)
    target_link_libraries("circos_test" ${ZLIB_LIBRARIES} ${PNG_LIBRARIES})
ENDIF(USE_TEXT)

IF(USE_XLSX)
	FIND_PACKAGE(xlsx_reader CONFIG REQUIRED)
	FIND_PACKAGE(miniz CONFIG REQUIRED)
	FIND_PACKAGE(tinyxml2 CONFIG REQUIRED)
	FIND_PACKAGE(nlohmann_json CONFIG REQUIRED)
	ADD_DEFINITIONS(-DWITH_XLSX_SUPPORT)
	ADD_EXECUTABLE(xlsx_test ${CIRCOS_TEST_DIR}/xlsx_test.cpp ${CIRCOS_SRC_LISTS})
	IF(USE_TEXT)
		target_link_libraries(xlsx_test xlsx_reader ${ZLIB_LIBRARIES} ${PNG_LIBRARIES} ${FREETYPE_LIBRARIES})
	ELSE(USE_TEXT)
		target_link_libraries(xlsx_test xlsx_reader ${ZLIB_LIBRARIES} ${PNG_LIBRARIES})
	ENDIF(USE_TEXT)
ENDIF(USE_XLSX)